--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^6.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "nanoid": "^3.3.7",
     "nestjs-cls": "^5.4.1",
     "reflect-metadata": "^0.2.0",
